--- a/app.css
+++ b/app.css
@@ -103,11 +103,16 @@ body {
 /* COMPONENT STYLES */
 .header {
   background-color: var(--color-gray-300);
+  margin-bottom: 2rem;
+}
+
+.header > div {
   padding: 0.75rem 1rem;
   display: flex;
   gap: 1rem;
   justify-content: space-between;
-  margin-bottom: 2rem;
+  max-width: 90rem;
+  margin: 0 auto;
 }
 
 .header h1 {
@@ -656,11 +661,5 @@ body {
 
   .callout {
     align-items: start;
-  }
-}
-
-@keyframes spin {
-  100% {
-    transform: (360deg);
   }
 }
