--- a/app.css
+++ b/app.css
@@ -224,16 +224,22 @@ body {
 }
 
 .alerts {
-  position: fixed;
-  right: 1rem;
-  top: 4rem;
-  width: 24rem;
+  max-width: 24rem;
   padding: 1rem;
   background-color: white;
   color: var(--font-dark);
   border-radius: 14px;
   border: 1px solid var(--stroke-s-50);
   box-shadow: 0px 4px 8px 0px rgba(0, 0, 0, 0.05);
+}
+
+.alerts, .menu {
+  position: fixed;
+  right: 1rem;
+  top: 4rem;
+  width: calc(100% - 2rem);
+  max-height: calc(100% - 4rem);
+  overflow-y: scroll;
 }
 
 .alerts,
@@ -290,10 +296,8 @@ body {
 }
 
 .menu {
-  position: fixed;
-  top: 4rem;
-  right: 1rem;
-  width: 20rem;
+  max-width: 20rem;
+  width: calc(100% - 2rem);
   border-radius: 14px;
   border: 1px solid var(--stroke-s-50);
   background: #fff;
@@ -322,6 +326,7 @@ body {
 }
 
 .menu li a,
+.user-info,
 .menu-title {
   padding: 6px;
   border-radius: 8px;
@@ -695,6 +700,12 @@ body {
 @media screen and (max-width: 50rem) {
   .header {
     margin-bottom: 1.75rem;
+  }
+
+  .alerts,
+  .menu {
+    top: 4.25rem;
+    max-height: calc(100% - 4.25rem);
   }
 
   .header > div {
